menu de sistema

--- a/Ejercicio de estructuras de datos/Ejercicio de estructuras de datos.vcxproj.filters
+++ b/Ejercicio de estructuras de datos/Ejercicio de estructuras de datos.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Cliente.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="seguro.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
